--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History of Racial Diversity in Academy Award Winners and Nominees</title>
-    <description>INFO 474 Autumn 2021 Final</description>
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <!--TO DO: Make separate HTML sections for each javascript file-->
+    <div id="bar-chart-div">
+        <svg id="bar-chart" width="1240" height="850"></svg>
+    </div>
 </body>
 <script src="//d3js.org/d3.v5.min.js"></script>
 <script src="./bar_chart.js"></script>
