--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div id="bar-chart-div">
         <svg id="bar-chart" width="1240" height="850"></svg>
     </div>
+    <div id="timeline-div">
+        <svg id="timeline" width="1240" height="850"></svg>
+    </div>
     <div id="tooltip"></div>
     <div id="map-div">
         <svg id="map"></svg>
