--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- Load d3.js -->
     <script src="//d3js.org/d3.v5.min.js"></script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
@@ -23,6 +23,7 @@
     </div>
     <div id="tooltip"></div>
     <div id="map-div">
+        <div id="map-dropdown"></div>
         <svg id="map"></svg>
     </div>
 </body>
