bar chart tooltip added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
+    <div id="tooltip-bars"></div>
     <div id="bar-chart-div">
         <svg id="bar-chart" width="1240" height="850"></svg>
     </div>
@@ -25,7 +26,7 @@
         <div id="information"> </div>
         <svg id="timeline" width="1240" height="200"></svg>
     </div>
-    <div id="tooltip"></div>
+    <div id="tooltip-map"></div>
     <div id="map-div">
         <div id="map-dropdown"></div>
         <svg id="map"></svg>
