timeline added tooltip and formatting

--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
     <div id="bar-chart-div">
         <svg id="bar-chart" width="1240" height="850"></svg>
     </div>
-    <div id="timeline-div" class="container">
-        <div id="information"> </div>
-        <svg id="timeline" width="1240" height="200"></svg>
+    <div id="timeline-div">
+        <h2 class='text-center header'>Timeline of Academy Award Winners Won By A Person of Color</h2>
+        <div id="information"> 
+            <h4 id="instructions" class="text-center">Hover on the dots to see a person's name and when they won. Click on a dot to learn more information about them!</h4>
+        </div>
+        <div id="timeline-scale">
+            <div id="timeline-tooltip"></div>
+            <svg id="timeline" width="1240" height="200"></svg>
+        </div>
+      
     </div>
     <div id="tooltip-map"></div>
     <div id="map-div">
