--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
         </div>
         <div class="scrollyText">
             <p id="t3">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Hover on the dots to see a person's name and when they won. Click on a dot to learn more information about the
+                timeline of Academy Award winners won by a person of color.
             </p>
         </div>
     </div>
