formatting so that timeline does not show when paragraphs are on top

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         
         <div class="scrollyText">
-            <p id="t1">
+            <p id="t1" class="background-rectangle">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
@@ -48,7 +48,7 @@
             </p>
         </div>
         <div class="scrollyText">
-            <p id="t2">
+            <p id="t2" class="background-rectangle">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
@@ -56,7 +56,7 @@
             </p>
         </div>
         <div class="scrollyText">
-            <p id="t3">
+            <p id="t3" class="background-rectangle">
                 Hover on the dots to see a person's name and when they won. Click on a dot to learn more information about the
                 timeline of Academy Award winners won by a person of color.
             </p>
