--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
 </head>
 <body>
 
-    <div class="title-div">
-        <h1>History of Racial Diversity in Academy Award Winners and Nominees</h1>
+    <div class="parent">
+        <div class="title-div child">
+            <h1>History of Racial Diversity in Academy Award Winners and Nominees</h1>
+        </div>
+        <div class="child">
+            <img src='img/oscars.png' alt="Orcars"/>
+        </div>
     </div>
     <p class="text" id="t0">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
@@ -32,6 +37,7 @@
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
+    <h2 class='text-center subtitle'>Academy Award Winners (1927-2020)</h2>
     <div id="tooltip-bars"></div>
     <div id="bar-chart-div">
         <svg id="bar-chart" width="1240" height="850"></svg>
