--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,22 +51,21 @@
     <div class="container">
         <div class="scrollyText">
             <p id="t1" class="background-rectangle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Hattie McDaniel is the first Black actor who have been nominated and win an Oscar. She, along with the other film's Black actors, wwas not allowed from attending the film's premiere in 1939. Although a huge accomplishment for the Black community, she still faced criticism for playing roles that perpetuated negative stereotypes of her race such as playing servants and slaves.
             </p>
         </div>
         <div class="scrollyText">
             <p id="t2" class="background-rectangle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+               Jose Ferrer is the first Puerto Rican-born actor and the first Hispanic actor to win an Academy Award. Prior to this, he won a Tony Award in 1947 for Best Actor in a Play.
             </p>
         </div>
         <div class="scrollyText">
             <p id="t3" class="background-rectangle">
+                Miyoshi Umeki was a Japanese-American singer and actress. She is the first East Asian-American woman to win an Academy Award for acting. In addition, she was nominated for the Golden Globe Awards (1962, 1970) and Tony Awards (1959).
+            </p>
+        </div>
+        <div class="scrollyText">
+            <p id="t4" class="background-rectangle">
                 Hover on the dots to see a person's name and when they won. Click on a dot to learn more information about the
                 timeline of Academy Award winners won by a person of color.
             </p>
