fix map description

--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
         </div>
     </div>
     <p class="text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Apart from the lack of racial diversity we have seen from the Academy Awards, there are not many international 
+        films that won Best Picture, one of the big five awards presented by the Academy of Motion Picture Art and Sciences. 
+        The geographic map below shows the number of films nominated or won the Academy Award from each country. 
+        Different colors indicate the range of numbers, and there is an option to select between nominated films or 
+        Oscar-winning films using a dropdown button. The number will also be shown when hovering at a country on the map.
     </p>
     <h2 class='text-center subtitle'>Geographic Map of Nominated Films/Films that Won Best Picture By Film Production Country</h2>
     <div id="tooltip-map"></div>
@@ -93,10 +94,11 @@
         <svg id="map"></svg>
     </div>
     <p class="text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        The visualizations show that the Academy Awards are not much inclusive until the recent years, 
+        after the campaign #OscarsSoWhite. However, people still look forward to seeing new changes from the Academy and 
+        the movie industry. On September 2020, the Academy of Motion Picture Arts and Sciences announced new representation 
+        and inclusion standards for Oscars, which could be another stage of improving diversity and inclusion for the Orcars 
+        nominees in the future.
     </p>
     <h2 class="source">Sources</h2>
     <p class="source-text">
