fixed tooltips, timeline formatting, scrolltelling visibilities, and interactability

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <svg id="timeline" width="1240" height="200"></svg>
         </div>
     </div>
-    <p class="text">
+    <p id='map-section' class="text">
         Apart from the lack of racial diversity we have seen from the Academy Awards, there are not many international 
         films that won Best Picture, one of the big five awards presented by the Academy of Motion Picture Art and Sciences. 
         The geographic map below shows the number of films nominated or won the Academy Award from each country. 
